--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="reset.css">
     </head>
+   
     <body>
-        <h1>Alurabook</h1>
+         <header class="cabeçalho">
+         <span class="cabeçalho_menu-hamburguer"></span>
+         <img src="img/Logo.svg" alt="Logo da Alurabooks">
+         <a href="#"><img src="img/Favoritos.svg"alt="Menu favoritos"></a>
+         <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+         <a href="#"><img src="img/Usuário.svga" alt="Meu perfil"></a>
+          </header>
     </body>
- <html>
+
+
+    
