--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <img src="img/Logo.svg" alt="Logo da Alurabooks">
          <a href="#"><img src="img/Favoritos.svg"alt="Menu favoritos"></a>
          <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-         <a href="#"><img src="img/Usuário.svga" alt="Meu perfil"></a>
+         <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
           </header>
     </body>
 
