--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
    
     <body>
          <header class="cabeçalho">
-         <span class="cabeçalho_menu-hamburguer"></span>
-         <img src="img/Logo.svg" alt="Logo da Alurabooks">
+             <div class="container">
+                <input type="checkbox" id="menu" class="container__botao">
+                <latel for="menu">
+                    <span class="cabeçalho__menu hamburguer container__imagem"></span>
+                    </label>
+                    <ul class="lista-menu">
+                        </ul>
+                        <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
+             <span class="cabeçalho_menu-hamburguer"></span>
+             <img src="img/Logo.svg" alt="Logo da Alurabooks">
+             <div class="container">
          <a href="#"><img src="img/Favoritos.svg"alt="Menu favoritos"></a>
          <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
          <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
+         <div>
           </header>
-    </body>
+        </body>
 
-
-    
+</html>
