--- a/index.html
+++ b/index.html
@@ -16,14 +16,30 @@
                     <span class="cabeçalho__menu hamburguer container__imagem"></span>
                     </label>
                     <ul class="lista-menu">
-                        </ul>
+                        <li class="lista-item"__titulo">Categorias</li>
+                        <li class="lista-menu__link">
+                            <a href="#" class="lista-menu__link">Programação</a>
+                            </li>
+                            <li class="lista-menu__item">
+                                <a href="#" class="lista-menu__link">Front-end</a>
+                            </li>
+                            <li class="lista-menu__item">
+                                 <a href="#" class="lista-menu__link">Infraestrutura</a>
+                            </li>
+                             <li class="lista-menu__item">
+                                <a href="#" class="lista-item__link">Bussines</a>
+
+                            </li>
+                             <li class="lista-menu__item">
+                                 <a href="#" class="lista-menu__link">Design & UX</a>
+                                 </li>
+                                </ul>
                         <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
+                        <img src="img/Favoritos.svg" alt="Logo da Alurabooks" class="container_imagem">
+                        <img src="img/Compras.svg" alt="Logo da Alurabooks" class="container_imagem">
+                        <img src="img/Usuário.svg" alt="Logo da Alurabooks" class="container_imagem">
              <span class="cabeçalho_menu-hamburguer"></span>
-             <img src="img/Logo.svg" alt="Logo da Alurabooks">
              <div class="container">
-         <a href="#"><img src="img/Favoritos.svg"alt="Menu favoritos"></a>
-         <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-         <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
          <div>
           </header>
         </body>
